syntax = "proto3";
package v0;

import "accounting.proto";

message WebSite {
  string url = 1;
  string in_language = 2;
}
